--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
     namespace 'com.example.airplane_android'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.airplane_android"
         minSdk 30
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -30,6 +31,7 @@ android {
 
 dependencies {
 
+    implementation platform('com.google.firebase:firebase-bom:32.3.1')
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
