--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,16 @@
         android:theme="@style/Theme.AirplaneAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".admin.PlaneActivity"
             android:exported="false" />
         <activity
             android:name=".InitialPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.AdminActivity"
             android:exported="true"
             android:theme="@style/Theme.AirplaneAndroid.NoActionBar">
             <intent-filter>
