--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,21 @@
         android:theme="@style/Theme.AirplaneAndroid.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".admin.PlaneEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.PlaneAddActivity"
+            android:exported="false" />
+        <activity
             android:name=".admin.TripActivity"
             android:exported="false" />
         <activity
             android:name=".admin.PlaneActivity"
             android:exported="false" />
         <activity
-            android:name=".admin.AdminActivity"
+            android:name=".InitialPageActivity"
             android:exported="true"
-            android:theme="@style/Theme.AirplaneAndroid.NoActionBar">
+            android:theme="@style/Theme.AirplaneAndroid.NoActionBar" />
         <activity
             android:name=".AddUserInfoActivity"
             android:exported="false" />
@@ -37,7 +43,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".InitialPageActivity"
+            android:name=".admin.AdminActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
