--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.AirplaneAndroid.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".admin.DetailTripActivity"
+            android:exported="false" />
+        <activity
             android:name=".ForgotPassActivity"
             android:exported="false" />
         <activity
