--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,80 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
-  <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
-  <application
-    android:allowBackup="true"
-    android:dataExtractionRules="@xml/data_extraction_rules"
-    android:fullBackupContent="@xml/backup_rules"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:supportsRtl="true"
-    android:theme="@style/Theme.AirplaneAndroid.NoActionBar"
-    tools:targetApi="31">
-    <activity
-      android:name=".admin.DetailTripActivity"
-      android:exported="false" />
-    <activity
-      android:name=".admin.TripEditActivity"
-      android:exported="false" />
-    <activity
-      android:name=".admin.TripAddActivity"
-      android:exported="false" />
-    <activity
-      android:name=".SearchActivity"
-      android:exported="false" />
-    <activity
-      android:name=".ChangePassActivity"
-      android:exported="false" />
-    <activity
-      android:name=".UpdateUserInfoActivity"
-      android:exported="false"
-      android:theme="@style/Theme.AirplaneAndroid" />
-    <activity
-      android:name=".ForgotPassActivity"
-      android:exported="false" />
-    <activity
-      android:name=".admin.PlaneEditActivity"
-      android:exported="false" />
-    <activity
-      android:name=".admin.PlaneAddActivity"
-      android:exported="false" />
-    <activity
-      android:name=".admin.TripActivity"
-      android:exported="false" />
-    <activity
-      android:name=".admin.PlaneActivity"
-      android:exported="false" />
-    <activity
-      android:name=".admin.AdminActivity"
-      android:exported="true"
-      android:theme="@style/Theme.AirplaneAndroid.NoActionBar" />
-    <activity
-      android:name=".AddUserInfoActivity"
-      android:exported="false" />
-    <activity
-      android:name=".RegisterActivity"
-      android:exported="false" />
-    <activity
-      android:name=".LoginActivity"
-      android:exported="false" />
-    <activity
-      android:name=".MainActivity"
-      android:exported="false" />
-    <activity
-        android:name=".BookingActivity"
-        android:exported="false" />
-    <activity
-      android:name=".InitialPageActivity"
-      android:exported="true">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+    <application
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AirplaneAndroid.NoActionBar"
+        tools:targetApi="31">
+        <activity
+            android:name=".BookingHistoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.DetailTripActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.TripEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.TripAddActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChangePassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateUserInfoActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AirplaneAndroid" />
+        <activity
+            android:name=".ForgotPassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.PlaneEditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.PlaneAddActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.TripActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.PlaneActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.AdminActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AirplaneAndroid.NoActionBar" />
+        <activity
+            android:name=".AddUserInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BookingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InitialPageActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-  </application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
