--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
 }
-
 android {
     namespace 'com.example.airplane_android'
     compileSdk 34
@@ -33,9 +32,8 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
-
 dependencies {
-
+    implementation 'com.razorpay:checkout:1.6.33'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
